# Tideline

./: .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/: main.py  sd_predictor.py
backtest/: evaluate.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: tideline.ts
dashboard/src/components/: BlobMap.tsx  ForecastMap.tsx  RegionDetail.tsx  TimeSlider.tsx
demo/: pitch_deck.md  script.md  sd_mvp.py
demo/output/: lgbm_target_3d.pkl  lgbm_target_7d.pkl  metrics.json
docs/: conf.py  index.rst
features/: __init__.py  build_feature_table.py  buoy_features.py  calcofi_features.py  kelp_features.py  satellite_features.py  unified_grid.py
infra/: architecture.md
infra/aws/: lambda_handler.py  requirements.txt
ingestion/: __init__.py  calcofi.py  noaa_buoys.py  satellite_sst.py  scripps_kelp.py  sdcity_kelp.py
notebooks/: tideline_analysis.py
pipeline/: features.py  ingest_buoys.py  ingest_calcofi.py  ingest_oisst.py  labels.py  train.py
scripts/: brev_train_raster_cnn.sh
tests/: test_api.py  test_features.py  test_ingestion.py  test_mhw_labels.py
